[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffee-intake-tracker"
version = "0.1.0"
description = "A simple command-line application to track daily coffee intake."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tsukiyomi22" }
]
keywords = ["python", "automation", "yorsh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
coffee_intake_tracker = "coffee_intake_tracker.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
